kubernetes/k3s-01/workloads/linkding/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkding
  namespace: linkding
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: linkding
  template:
    metadata:
      labels:
        app: linkding
    spec:
      containers:
        - name: linkding
          image: docker.io/sissbruecker/linkding:1.47.0@sha256:e35cb50e0581178f245125ffaa909c565416c94c9f22ace305a7d234a4345522
          startupProbe:
            httpGet:
              path: /health
              port: 9090
            periodSeconds: 60
            failureThreshold: 10
          # resources:
          #   requests:
          #     cpu: 1m
          #     memory: 160Mi
          #   limits:
          #     cpu: 25m
          #     memory: 256Mi
          ports:
           - containerPort: 9090
          volumeMounts:
            - name: linkding
              mountPath: /etc/linkding/data
      volumes:
        - name: linkding
          persistentVolumeClaim:
            claimName: linkding
