kubernetes/k3s-01/workloads/linkding/ingress-route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: linkding
  namespace: linkding
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`linkding.47fc5c.com`)
      kind: Rule
      services:
        - name: linkding
          kind: Service
          port: 9090
          scheme: http
  tls:
    secretName: linkding-certificate
